crates/api-snowflake-rest/src/tests/snapshots/snowflake_generic/api_snowflake_rest__tests__test_generic_sqls__snowflake_generic__submit_ok_query_with_concurrent_limit-2.snap
---
source: crates/api-snowflake-rest/src/tests/test_generic_sqls.rs
description: "Async SQL #2 [spent: 80/209ms]: SELECT sleep(1);>\nQuery UUID: 00000000-0000-0000-0000-077eef995e9b"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
