crates/api-snowflake-rest/src/tests/snapshots/snowflake_generic/api_snowflake_rest__tests__test_generic_sqls__snowflake_generic__submit_ok_query_with_concurrent_limit-3.snap
---
source: crates/api-snowflake-rest/src/tests/test_generic_sqls.rs
description: "Async SQL #3 [spent: 39/251ms]: SELECT sleep(1);>\nQuery UUID: 00000000-0000-0000-0000-000000000000"
expression: snapshot
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "errorCode": "010001",
    "sqlState": "02000",
    "queryId": "UUID"
  },
  "success": false,
  "message": "Concurrency limit reached — too many concurrent queries are running",
  "code": "010001"
}
