crates/api-snowflake-rest/src/tests/snapshots/snowflake_generic/api_snowflake_rest__tests__test_generic_sqls__snowflake_generic__submit_ok_query_with_concurrent_limit.snap
---
source: crates/api-snowflake-rest/src/tests/test_generic_sqls.rs
description: "Async SQL #1 [spent: 102/102ms]: SELECT sleep(1);>\nQuery UUID: 00000000-0000-0000-0000-077ee5805323"
expression: pretty_json
---
{
  "data": {
    "rowtype": [],
    "rowsetBase64": null,
    "rowset": null,
    "total": null,
    "queryResultFormat": null,
    "queryId": "UUID"
  },
  "success": true,
  "message": "successfully executed",
  "code": null
}
